# RAG-EndToEndProject

./: README.md  ingestion_pipeline.py  pyproject.toml  requirements.txt  retrivel_pipeline.py
